# openvmm

./: .gitignore  CCA_KVM_FVP_PLAN.md  CCA_SHARED_GUEST_MEMORY_PLAN.md  CCA_SNP_OVERLAP_FINDINGS.md  Cargo.toml  LOCAL_ONLY_REMAINING_CHANGES.md  SEV_SNP_SUPPORT_TRACKING.md  SNP_CCA_UPSTREAM_SPLIT_PLAN.md  SNP_VM_SUPPORT_FINDINGS.md  TODO-v15-cca-patch-migration.md  artifact-mapping.md  copy-snp-artifacts.sh  ipmi.md  json-disk-kind-feature-request.md  mcp-improvements.md  openhcl-nested-virt.md  openvmm-mcp.md  phase1-fixes.md  plan-guest-memfd-snp.md  plan-igvm-v2-multicontext.md  plan-kvm-snp-loader-launch.md  plan-mcp-vmcontroller.md  plan-snp-igvm-kvm.md  plan-vmm-tests-run-improvements.md  run-cca-openvmm-repro.sh  run-snp-openvmm-repro.sh  run-snp-openvmm.sh  snp-debug-notes.md  todo-qemu-cca-support.md  virtio-blk-uefi-plan.md
.github/: copilot-instructions.md
.github/instructions/: vmm-tests.instructions.md
.github/workflows/: openvmm-docs-ci.yaml
Guide/src/: SUMMARY.md
iso/: Autounattend.xml
nix/: openhcl_kernel.nix
openhcl/: rootfs.config  rootfs.kvm.config
openhcl/openhcl_boot/: Cargo.toml
openhcl/openvmm_hcl/: Cargo.toml
openhcl/shared_pool_alloc/: Cargo.toml
openvmm/openvmm_mcp/: Cargo.toml
openvmm/openvmm_mcp/src/: event_loop.rs  lib.rs  protocol.rs  serial_buffer.rs  transport.rs  vm_handle.rs
openvmm/openvmm_mcp/src/tools/: inspect.rs  lifecycle.rs  mod.rs  serial.rs
petri/: Cargo.toml
scripts/: setup-alpine.sh  test_mcp.py
vm/loader/igvmfilegen_config/: Cargo.toml
vm/loader/igvmfilegen_config/src/: lib.rs
(+261 files in other folders)
