# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "igvmfilegen_config"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["std", "derive"] }
thiserror.workspace = true

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true
